Version 1.21.6 *
==================
- Fixed crash when reading a Studio project and the main file is missing.
- Added warning for missing files when reading a Studio project.
- Fixed tab menu to show only files of the focused project (when focused).
- Fixed a crash when a project with an extension number is edited in the project options.

Version 1.21.5
==================
- Added count of active processes to Studio title.
- Fixed missing shortcuts Shift-F9 and Shift-F10.
- Fixed crash when performing a search at the project level, where the file list contained modified and unmodified files.
- Enabled renaming of a project in the project editor.
- Restore and persist the selected filter in file open dialog.
- Improved focus system log events, i.e. focus the system log on errors only.

Version 1.21.4
==================
- Fixed completer position when the profiler is visible.
- Fixed incorrect error message when interrupting Studio without debugging.
- Fixed that the Studio window has been restored at the wrong position.
- Improved GAMS error message when the command line parameters contain errors.
- Upgraded to Qt 6.9.1

Version 1.21.3
==================
- Added functionality to store and restore bookmarks.
- Fixed a crash when renaming a project, while a GDX viewer is open.
- Fixed that Studio window size isn't restored on macOS.
- Fixed missing DCO `$onEmbeddedCode` in completer.
- Improved edit function in GAMS User Config Editor, actions are now enabled/disabled based on single cell selection.

Version 1.21.2
==================
- Fixed crash on Windows 10 by allowing to disable the integrated Help View.
- New command line parameter `--integrated-help=on/off` (default: on) allows to enable/disable the integrated Help View.

Version 1.21.1
==================
- Added ctrl-click to the code editor to open 'yamlFile' or 'yamlFileEnd' defined in $onEmbeddedCode/embeddedCode in the Connect editor.