@@ -4,6 +4,7 @@ Version 1.21.6 *
 - Added warning for missing files when reading a Studio project.
 - Fixed tab menu to show only files of the focused project (when focused).
 - Fixed a crash when a project with an extension number is edited in the project options.
+- Fixed empty `FileUsed` Tab in Reference File Viewer when the file has been updated and reloaded. 
 
 Version 1.21.5
 ==================
